--- a/package.json
+++ b/package.json
@@ -2,23 +2,74 @@
   "name": "closure-webpack-plugin",
   "version": "0.0.1",
   "description": "Webpack Google Closure Compiler plugin",
-  "main": "index.js",
+  "author": "Chad Killingsworth (@ChadKillingsworth)",
+  "license": "MIT",
+  "main": "dist/cjs.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "webpack-defaults": "webpack-defaults",
+    "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
+    "clean": "del-cli dist",
+    "lint": "eslint --cache src test",
+    "lint-staged": "lint-staged",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build",
+    "release": "standard-version",
+    "security": "nsp check",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "cross-env": "^5.0.5",
+    "del-cli": "^1.1.0",
+    "eslint": "^4.8.0",
+    "eslint-config-webpack": "^1.2.5",
+    "eslint-plugin-import": "^2.7.0",
+    "jest": "^21.2.1",
+    "lint-staged": "^4.2.3",
+    "nsp": "^2.8.1",
+    "pre-commit": "^1.2.2",
+    "standard-version": "^4.2.0",
+    "webpack": "^3.6.0",
+    "webpack-defaults": "^1.6.0"
+  },
+  "engines": {
+    "node": ">= 4.8 < 5.0.0 || >= 5.10"
+  },
+  "peerDependencies": {
+    "webpack": "^2.0.0 || ^3.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webpack-contrib/closure-webpack-plugin.git"
   },
+  "bugs": {
+    "url": "https://github.com/webpack-contrib/closure-webpack-plugin/issues"
+  },
+  "homepage": "https://github.com/webpack-contrib/closure-webpack-plugin#readme",
   "keywords": [
     "webpack",
     "closure",
     "optimize"
   ],
-  "author": "Chad Killingsworth (@ChadKillingsworth)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/webpack-contrib/closure-webpack-plugin/issues"
-  },
-  "homepage": "https://github.com/webpack-contrib/closure-webpack-plugin#readme"
+  "pre-commit": "lint-staged",
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
