--- a/package.json
+++ b/package.json
@@ -10,15 +10,9 @@
   ],
   "scripts": {
     "test": "jest",
-    "webpack-defaults": "webpack-defaults",
-    "start": "npm run build -- -w",
     "appveyor:test": "npm run test",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
-    "clean": "del-cli dist",
     "lint": "eslint --cache src test",
     "lint-staged": "lint-staged",
-    "prebuild": "npm run clean",
-    "prepublish": "npm run build",
     "release": "standard-version",
     "security": "nsp check",
     "test:watch": "jest --watch",
@@ -27,12 +21,11 @@
     "travis:test": "npm run test -- --runInBand",
     "travis:coverage": "npm run test:coverage -- --runInBand"
   },
+  "dependencies": {
+    "google-closure-compiler": "^20171011.0.0-webpack-beta.0",
+    "webpack-sources": "^1.0.1"
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.5",
     "del-cli": "^1.1.0",
     "eslint": "^4.8.0",
@@ -43,8 +36,7 @@
     "nsp": "^2.8.1",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.2.0",
-    "webpack": "^3.6.0",
-    "webpack-defaults": "^1.6.0"
+    "webpack": "^3.6.0"
   },
   "engines": {
     "node": ">= 4.8 < 5.0.0 || >= 5.10"
@@ -71,9 +63,5 @@
       "eslint --fix",
       "git add"
     ]
-  },
-  "dependencies": {
-    "google-closure-compiler": "^20171011.0.0-webpack-beta.0",
-    "webpack-sources": "^1.0.1"
   }
 }
