--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "webpack": "^3.6.0"
   },
   "engines": {
-    "node": ">= 4.8 < 5.0.0 || >= 5.10"
+    "node": ">=6.9.0 || >=8.9.0"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || ^3.0.0"
+    "webpack": "^3.0.0 || ^4.0.0"
   },
   "repository": {
     "type": "git",
