--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,29 @@
+unit_tests: &unit_tests
+  steps:
+    - checkout
+    - run:
+        name: Install modules and dependencies.
+        command: npm install
+    - run:
+        name: Run unit tests.
+        command: npm test
+
 version: 2
 jobs:
   build:
     working_directory: ~/closure-webpack-plugin
     docker:
-      - image: webpackcontrib/circleci-java8-node8:latest
+      - image: webpackcontrib/circleci-node-base:latest
     branches:
       only:
         - master
         - next
-        - /.*\/feature.*/
+        - /.*\/refactor.*/
+        - /.*\/chore.*/
+        - /.*\/feat.*/
+        - /.*\/perf.*/
+        - /.*\/test.*/
+        - /.*\/fix.*/
     steps:
       - checkout
       - setup_remote_docker
@@ -21,16 +36,68 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      # TODO: d3viant0ne - Implement
-      # - run:
-      #     name: Unit Tests
-      #     command: npm run test:coverage
-      # - run:
-      #     name: Code Linting
-      #     command: npm run lint
-      # - run:
-      #     name: Security Scan
-      #     command: npm run security
-      # - run:
-      #     name: Report Code Coverage
-      #     command: bash <(curl -s https://codecov.io/bash)
+  node8:
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node8:latest
+    steps:
+      - checkout
+      - run:
+          name: Install modules and dependencies.
+          command: npm install
+      - run:
+          name: Run unit tests.
+          command: npm test
+      - run:
+          name: Submit coverage data to codecov.
+          command: bash <(curl -s https://codecov.io/bash)
+          when: always
+  node6:
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node6:latest
+    <<: *unit_tests
+  node9:
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node9:latest
+    <<: *unit_tests
+
+  analysis:
+    docker:
+      - image: webpackcontrib/circleci-node-base:latest
+    steps:
+      - checkout
+      - run:
+          name: Install modules and dependencies.
+          command: |
+            npm install
+      - run:
+          name: Run linting.
+          command: npm run lint
+      - run:
+          name: Run NSP Security Check.
+          command: npm run security
+
+version: 2.0
+workflows:
+  version: 2
+  tests:
+    jobs:
+      - node6:
+          filters:
+            tags:
+              only: /.*/
+      - node8:
+          filters:
+            tags:
+              only: /.*/
+      - node9:
+          filters:
+            tags:
+              only: /.*/
+      - analysis:
+          requires:
+            - node6
+            - node8
+            - node9
+          filters:
+            tags:
+              only: /.*/
