--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest",
     "appveyor:test": "npm run test",
     "commitlint": "commitlint",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
     "lint-staged": "lint-staged",
     "release": "standard-version",
@@ -37,6 +38,7 @@
     "eslint": "^4.8.0",
     "eslint-config-webpack": "^1.2.5",
     "eslint-plugin-import": "^2.7.0",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.2.3",
     "memory-fs": "^0.4.1",
