--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
+    "lint:commits": "commitlint --from=$(git merge-base master '${CIRCLE_BRANCH}')",
     "lint-staged": "lint-staged",
     "release": "standard-version",
     "release:ci": "conventional-github-releaser -p angular",
-    "release:validate": "commitlint",
+    "release:validate": "commitlint --from=$(git merge-base master (git describe --tags --abbrev=0))",
     "security": "nsp check",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
