--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,37 @@
+unit_tests: &unit_tests
+  steps:
+    - checkout
+    - setup_remote_docker
+    - restore_cache:
+        key: dependency-cache-{{ checksum "package.json" }}
+    - run:
+        name: NPM Rebuild
+        command: npm rebuild
+    - run:
+        name: Run unit tests.
+        command: npm test
+canary_tests: &canary_tests
+  steps:
+    - checkout
+    - setup_remote_docker
+    - restore_cache:
+        key: dependency-cache-{{ checksum "package.json" }}
+    - run:
+        name: NPM Rebuild
+        command: npm rebuild
+    - run:
+        name: Install Webpack Canary
+        command: npm i --no-save git://github.com/webpack/webpack.git#master
+    - run:
+        name: Run unit tests.
+        command: npm test
+
 version: 2
 jobs:
-  build:
+  dependency_cache:
     working_directory: ~/closure-webpack-plugin
     docker:
-      - image: webpackcontrib/circleci-java8-node8:latest
-    branches:
-      only:
-        - master
-        - next
-        - /.*\/feature.*/
+      - image: webpackcontrib/circleci-node-base:latest
     steps:
       - checkout
       - setup_remote_docker
@@ -21,16 +44,126 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      # TODO: d3viant0ne - Implement
-      # - run:
-      #     name: Unit Tests
-      #     command: npm run test:coverage
-      # - run:
-      #     name: Code Linting
-      #     command: npm run lint
-      # - run:
-      #     name: Security Scan
-      #     command: npm run security
-      # - run:
-      #     name: Report Code Coverage
-      #     command: bash <(curl -s https://codecov.io/bash)
+
+  node8_webpack_latest:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node8:latest
+    steps:
+      - checkout
+      - setup_remote_docker
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: NPM Rebuild
+          command: npm rebuild
+      - run:
+          name: Run unit tests.
+          command: npm test
+      - run:
+          name: Submit coverage data to codecov.
+          command: bash <(curl -s https://codecov.io/bash)
+          when: always
+  node6_webpack_latest:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node6:latest
+    <<: *unit_tests
+  node9_webpack_latest:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node9:latest
+    <<: *unit_tests
+  node8_webpack_canary:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-jdk9-node8:latest
+    <<: *canary_tests
+  analysis:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-node-base:latest
+    steps:
+      - checkout
+      - setup_remote_docker
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: NPM Rebuild
+          command: npm rebuild
+      - run:
+          name: Run linting.
+          command: npm run lint
+      - run:
+          name: Run NSP Security Check.
+          command: npm run security
+      - run:
+          name: Validate Commit Messages
+          command: npm run lint:commits
+  publish:
+    working_directory: ~/closure-webpack-plugin
+    docker:
+      - image: webpackcontrib/circleci-node-base:latest
+    steps:
+      - checkout
+      - setup_remote_docker
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: NPM Rebuild
+          command: npm rebuild
+      - run:
+          name: Validate Commit Messages
+          command: npm run release:validate
+      - run:
+          name: Publish to NPM
+          command: printf "Pretend running conventional-github-releaser"
+
+version: 2.0
+workflows:
+  version: 2
+  validate-publish:
+    jobs:
+      - dependency_cache
+      - node6_webpack_latest:
+          requires:
+            - dependency_cache
+          filters:
+            tags:
+              only: /.*/
+      - node8_webpack_latest:
+          requires:
+            - dependency_cache
+          filters:
+            tags:
+              only: /.*/
+      - node9_webpack_latest:
+          requires:
+            - dependency_cache
+          filters:
+            tags:
+              only: /.*/
+      - node8_webpack_canary:
+          requires:
+            - dependency_cache
+          filters:
+            tags:
+              only: /.*/
+      - analysis:
+          requires:
+            - node6_webpack_latest
+            - node8_webpack_latest
+            - node9_webpack_latest
+          filters:
+            tags:
+              only: /.*/
+      - publish:
+          requires:
+            - node6_webpack_latest
+            - node8_webpack_latest
+            - node9_webpack_latest
+            - analysis
+          filters:
+            branches:
+              only:
+                - master
