--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "travis:coverage": "npm run test:coverage -- --runInBand"
   },
   "dependencies": {
-    "google-closure-compiler": "^20171118.0.0-webpack-beta",
+    "google-closure-compiler": "20171119.0.0-webpack-beta",
     "webpack-sources": "^1.0.1"
   },
   "devDependencies": {
