--- a/package.json
+++ b/package.json
@@ -3,72 +3,69 @@
   "version": "0.0.17",
   "description": "Webpack Google Closure Compiler plugin",
   "author": "Chad Killingsworth (@ChadKillingsworth)",
+  "description": "Webpack Google Closure Compiler plugin",
   "license": "MIT",
   "main": "src/index.js",
   "files": [
     "src"
   ],
   "scripts": {
-    "test": "jest",
-    "appveyor:test": "npm run test",
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
-    "lint:commits": "commitlint --from=$(git merge-base master '${CIRCLE_BRANCH}')",
+    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
     "release": "standard-version",
     "release:ci": "conventional-github-releaser -p angular",
-    "release:validate": "commitlint --from=$(git merge-base master (git describe --tags --abbrev=0))",
+    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test -- --runInBand",
-    "travis:coverage": "npm run test:coverage -- --runInBand"
+    "ci:lint": "npm run lint && npm run security",
+    "ci:test": "npm run test -- --runInBand",
+    "ci:coverage": "npm run test:coverage -- --runInBand"
   },
   "dependencies": {
     "acorn": "^5.0.0",
     "acorn-dynamic-import": "^2.0.0",
     "google-closure-compiler": "20171204.0.0-webpack-beta",
+    "schema-utils": "^0.4.3",
     "webpack-sources": "^1.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^5.0.0",
-    "@commitlint/config-angular": "^5.0.0",
+    "@commitlint/cli": "^5.2.6",
+    "@commitlint/config-angular": "^5.1.1",
+    "@webpack-contrib/eslint-config-webpack": "^2.0.2",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.0.4",
+    "babel-preset-env": "^1.6.1",
     "conventional-github-releaser": "^2.0.0",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.3",
+    "del": "^3.0.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.8.0",
-    "eslint-config-webpack": "^1.2.5",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint": "^4.13.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.4.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.2.3",
     "memory-fs": "^0.4.1",
     "nsp": "^3.1.0",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.9.2",
     "standard-version": "^4.2.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.10.0"
   },
   "engines": {
-    "node": ">=6.9.0 || >=8.9.0"
+    "node": ">= 6.9.0 || >= 8.9.0"
   },
   "peerDependencies": {
     "webpack": "^3.0.0 || ^4.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/webpack-contrib/closure-webpack-plugin.git"
-  },
-  "bugs": {
-    "url": "https://github.com/webpack-contrib/closure-webpack-plugin/issues"
-  },
-  "homepage": "https://github.com/webpack-contrib/closure-webpack-plugin#readme",
-  "keywords": [
-    "webpack",
-    "closure",
-    "optimize"
-  ],
+  "homepage": "https://github.com/webpack-contrib/closure-webpack-plugin",
+  "repository": "https://github.com/webpack-contrib/closure-webpack-plugin",
+  "bugs": "https://github.com/webpack-contrib/closure-webpack-plugin/issues",
   "pre-commit": "lint-staged",
   "lint-staged": {
     "*.js": [
