chore: update to the July 2018 release of the compiler
Updates the plugin to version 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "closure-webpack-plugin",
-  "version": "1.0.0-6",
-  "publishConfig": {
-    "tag": "next"
-  },
+  "version": "1.0.0",
   "description": "Webpack Google Closure Compiler and Closure Library plugin",
   "author": "Chad Killingsworth (@ChadKillingsworth)",
   "license": "MIT",
@@ -31,7 +28,7 @@
   "dependencies": {
     "acorn": "^5.0.0",
     "acorn-dynamic-import": "^2.0.0",
-    "google-closure-compiler": "20180702.0.0-webpack-beta",
+    "google-closure-compiler": ">=20180716.0.0",
     "schema-utils": "^0.4.5",
     "webpack-sources": "^1.0.1"
   },
