fix: add schema folder to npm package

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "closure-webpack-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Webpack Google Closure Compiler and Closure Library plugin",
   "author": "Chad Killingsworth (@ChadKillingsworth)",
   "license": "MIT",
   "main": "src/index.js",
   "files": [
-    "src"
+    "src",
+    "schema"
   ],
   "scripts": {
     "commitlint": "commitlint",
