feature: Update to support goog.module.declareNamespace
TODO to support the correct dependency ordering.

--- a/demo/mixed-modules/package.json
+++ b/demo/mixed-modules/package.json
@@ -15,13 +15,12 @@
   "author": "koba04",
   "license": "MIT",
   "dependencies": {
-    "google-closure-deps": "^20180910.1.0",
     "google-closure-library": "^20180805.0.0",
     "object-assign": "^4.1.1"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "webpack": "3.x",
-    "webpack-dev-server": "^2.11.3"
+    "npm-run-all": "^4.1.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
