--- a/demo/mixed-modules/package.json
+++ b/demo/mixed-modules/package.json
@@ -19,8 +19,8 @@
     "object-assign": "^4.1.1"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "npm-run-all": "^4.1.3",
+    "webpack": "3.x",
+    "webpack-dev-server": "2.x"
   }
 }
