--- a/demo/mixed-modules/package.json
+++ b/demo/mixed-modules/package.json
@@ -5,22 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "run-s build:deps start:devserver",
-    "start:devserver": "webpack-dev-server",
+    "start:devserver": "webpack-dev-server --mode=development",
     "build": "run-s build:deps build:webpack",
-    "build:webpack": "webpack -p --env production",
-    "build:deps": "./node_modules/google-closure-deps/bin/closuremakedeps.js --no-validate --root src --closure-path './node_modules/google-closure-library/closure/goog' > public/deps.js",
+    "build:webpack": "webpack -p --mode=production",
+    "build:deps": "./node_modules/google-closure-library/closure/bin/build/depswriter.py --root_with_prefix 'src ../../../../src' > public/deps.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "koba04",
   "license": "MIT",
   "dependencies": {
-    "google-closure-library": "^20180805.0.0",
+    "google-closure-library": "^20180910.0.0",
     "object-assign": "^4.1.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "4.x",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "3.x"
   }
 }
