--- a/demo/mixed-modules/package.json
+++ b/demo/mixed-modules/package.json
@@ -20,8 +20,8 @@
     "object-assign": "^4.1.1"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "webpack": "3.x",
-    "webpack-dev-server": "2.x"
+    "webpack-dev-server": "^2.11.3"
   }
 }
