feat: use a custom build of closure-compiler for dynamic import support

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "acorn": "^5.0.0",
     "acorn-dynamic-import": "^2.0.0",
-    "google-closure-compiler": ">=20180805.0.0",
+    "google-closure-compiler": "^20181205.0.0",
     "schema-utils": "1.x",
     "unquoted-property-validator": "^1.0.2",
     "webpack-sources": "1.x"
