--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@commitlint/config-angular": "^5.1.1",
     "@webpack-contrib/eslint-config-webpack": "^2.0.2",
     "babel-core": "^6.26.3",
-    "babel-jest": "^22.0.4",
+    "babel-jest": "^24.1.0",
     "babel-preset-env": "^1.7.0",
     "conventional-github-releaser": "^2.0.0",
     "del": "^3.0.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-prettier": "^2.4.0",
     "google-closure-compiler": "20181231.0.0-webpack-beta",
     "husky": "^0.14.3",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "lint-staged": "^4.2.3",
     "memory-fs": "^0.4.1",
     "pre-commit": "^1.2.2",
@@ -61,7 +61,7 @@
     "node": ">= 6.9.0 || >= 8.9.0"
   },
   "peerDependencies": {
-    "google-closure-compiler": "20181231.0.0-webpack-beta",
+    "google-closure-compiler": ">=20190215.0.1",
     "webpack": "4.x"
   },
   "homepage": "https://github.com/webpack-contrib/closure-webpack-plugin",
