--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.4.0",
-    "google-closure-compiler": ">=20190215.0.1",
+    "google-closure-compiler": "^20190307.0.0-nightly",
     "husky": "^0.14.3",
     "jest": "^24.1.0",
     "lint-staged": "^4.2.3",
