--- a/package.json
+++ b/package.json
@@ -33,25 +33,24 @@
     "webpack-sources": "1.x"
   },
   "devDependencies": {
-    "@commitlint/cli": "^5.2.8",
-    "@commitlint/config-angular": "^5.1.1",
-    "@webpack-contrib/eslint-config-webpack": "^2.0.2",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-angular": "^8.2.0",
+    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
-    "conventional-github-releaser": "^2.0.0",
-    "del": "^3.0.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-prettier": "^2.4.0",
-    "google-closure-compiler": "^20190307.0.0-nightly",
-    "husky": "^0.14.3",
-    "jest": "^24.1.0",
-    "lint-staged": "^4.2.3",
-    "memory-fs": "^0.4.1",
+    "conventional-github-releaser": "^3.1.3",
+    "del": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "google-closure-compiler": "^20191027.0.0",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.9.2",
-    "standard-version": "^4.4.0",
+    "prettier": "^1.19.1",
+    "standard-version": "^7.0.1",
     "webpack": "4.x"
   },
   "engines": {
