--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
+    "memory-fs": "^0.5.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "standard-version": "^7.0.1",
