chore: add funding field to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "src",
     "schema"
   ],
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/webpack"
+  },
   "scripts": {
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
