--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "acorn": "8.x",
+    "acorn-walk": "^8.2.0",
     "schema-utils": "1.x",
     "unquoted-property-validator": "^1.0.2",
     "webpack-sources": "1.x"
