chore: update dependencies in demos

--- a/demo/es5-and-es6/package.json
+++ b/demo/es5-and-es6/package.json
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "npm-run-all": "4.x",
-    "webpack": "^4.37.0",
+    "webpack": "4.x",
     "webpack-cli": "3.x",
-    "webpack-dev-server": "3.x"
+    "webpack-dev-server": "4.x"
   }
 }
